<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
>
    <View
            android:id="@+id/v_circle"
            android:layout_width="240dp"
            android:layout_height="240dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ll_y"
            android:background="@drawable/circle_shape"
    />

    <LinearLayout
            android:id="@+id/ll_x"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ll_y"
            app:layout_constraintTop_toBottomOf="@id/v_circle"
            app:layout_constraintBottom_toTopOf="@id/ll_green"
            android:gravity="center">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x_eq"/>

        <TextView
                android:id="@+id/tv_x"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/test_num"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_y"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/ll_x"
            app:layout_constraintEnd_toStartOf="@id/ll_r"
            app:layout_constraintTop_toBottomOf="@id/v_circle"
            app:layout_constraintBottom_toTopOf="@id/ll_green"
            android:gravity="center">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y_eq"/>

        <TextView
                android:id="@+id/tv_y"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/test_num"
        />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_r"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/ll_y"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_circle"
            app:layout_constraintBottom_toTopOf="@id/ll_green"
            android:gravity="center">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radius_eq"/>
        <TextView
                android:id="@+id/tv_radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_num"
        />

    </LinearLayout>


    <LinearLayout
            android:id="@+id/ll_red"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ll_green"
            app:layout_constraintTop_toBottomOf="@id/ll_y"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center">
        <TextView
                android:layout_marginStart="16dp"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/red_eq"/>
        <TextView
                android:layout_marginEnd="16dp"
                android:id="@+id/tv_colorR"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/test_num"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/ll_green"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/ll_red"
            app:layout_constraintEnd_toStartOf="@id/ll_blue"
            app:layout_constraintTop_toBottomOf="@id/ll_y"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center">

    <TextView
                android:layout_marginStart="16dp"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/green_eq"/>
        <TextView
                android:layout_marginEnd="16dp"
                android:id="@+id/tv_colorG"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/test_num"/>

    </LinearLayout>
    <LinearLayout
            android:id="@+id/ll_blue"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/ll_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_y"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center">

    <TextView
                android:layout_gravity="right"
                android:layout_marginStart="16dp"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/blue_eq"/>
        <TextView
                android:layout_marginEnd="16dp"
                android:id="@+id/tv_colorB"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/test_num"
        />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>